fixed font-size of big-picture h1 on mobile screens

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -52,13 +52,14 @@
 
 .big-picture h1 {
   font-family: $primary-text-font;
-  font-size: 18px;
+  font-size: 14px;
   font-weight: 300;
   color: white;
-  line-height: 1.4;
+  line-height: 1.3;
   @media (min-width: 768px) {
     margin: 0;
     font-size: 20px;
+    line-height: 1.4;
   }
   a {
     color: white;
